prod/04-core/templates/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuvla
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/custom-request-headers: "nuvla-authn-info:"
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              service:
                name: api
                port:
                  number: 8200
            pathType: ImplementationSpecific
          - path: /ui
            backend:
              service:
                name: ui
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /
            backend:
              service:
                name: ui
                port:
                  number: 80
            pathType: ImplementationSpecific
